syntax = "proto3";
package protolca.services;

option csharp_namespace = "ProtoLCA.Services";
option go_package = ".;protolca";
option java_package = "org.openlca.proto.grpc";
option java_multiple_files = true;
option java_outer_classname = "CommonsProto";

import "olca.proto";

message ProtoDataSet {
  oneof model {
    ProtoActor actor = 1;
    ProtoCategory category = 2;
    ProtoCurrency currency = 3;
    ProtoDQSystem dq_system = 4;
    ProtoFlow flow = 5;
    ProtoFlowProperty flow_property = 6;
    ProtoImpactCategory impact_category = 7;
    ProtoImpactMethod impact_method = 8;
    ProtoLocation location = 9;
    ProtoParameter parameter = 10;
    ProtoProcess process = 11;
    ProtoProductSystem product_system = 12;
    ProtoProject project = 13;
    ProtoSocialIndicator social_indicator = 14;
    ProtoSource source = 15;
    ProtoUnitGroup unit_group = 16;
  }
}

// A technosphere flow is a pair of a process and a flow where the flow can be a
// product or waste flow. For products flows, the process is a process that
// produces this product; thus, has it on the output side. For waste flows, the
// process is a process that consumes this waste flow; thus, has it on the input
// side. In a product system, there can be multiple tech-flows with the same
// product or waste flow but different processes, e.g. when there are multiple
// processes that produce the same product.
message ProtoTechFlow {
  ProtoRef process = 1;
  oneof flow {
    ProtoRef product = 2;
    ProtoRef waste = 3;
  }
}

message ProtoEnviFlow {
  ProtoRef flow = 1;
  ProtoRef location = 2;
  bool is_input = 3;
}
